--- a/app/styles/modal.css
+++ b/app/styles/modal.css
@@ -77,7 +77,7 @@
 }
 
 .modal-extra-slider.half-size {
-  $height: 45%;
+  $height: 46%;
   height: $height;
   bottom: calc($height * -1);
 }
@@ -91,6 +91,13 @@
 
 .modal-extra-slider-content{
   width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-extra-slider-content.single-item{
+  width: 45%;
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -151,6 +158,28 @@
   min-width: 175px;
 }
 
+.modal-extra-slider-content > .process-property-input:exactly(1){
+  width: 45%;
+  max-width: 45%;
+  margin: auto;
+}
+
+.modal-extra-slider-content > .process-property-input:exactly(2),
+.modal-extra-slider-content > .process-property-input:exactly(4){
+  width: 50%;
+  max-width: 50%;
+  margin: auto;
+}
+
+.modal-extra-slider.half-size .step-indicator{
+  margin-top: 0;
+  margin-bottom: 0.25em;
+}
+
+.modal-extra-slider.half-size .modal-extra-slider-header{
+  margin-bottom: 0.25em;
+}
+
 .new-phase-trigger {
   $width: 105px;
   width: $width;
@@ -188,6 +217,7 @@
   width: calc( 50% - 20px);
   margin-left: 20px;
 }
+
 .phase-basic-info::after {
   content: "";
   display: block;
